--- a/delete-data.html
+++ b/delete-data.html
@@ -32,6 +32,6 @@
         <li>Confirm the action when prompted.</li>
     </ol>
     <p>All your cloud-synced data will be permanently deleted and cannot be recovered.</p>
-    <p>If you have any issues deleting your data, please contact us at <a href="mailto:brianhan.github.io@gmail.com">support@yourdomain.com</a>.</p>
+    <p>If you have any issues deleting your data, please contact us at <a href="mailto:brianhan.github.io@gmail.com">brianhan.github.io@gmail.com</a>.</p>
 </body>
 </html>
